--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         
         {
-            "name": "Python: Current File (Integrated Terminal)",
+            "name": "Python: Current File ",
             "type": "python",
             "request": "launch",
             "program": "${file}",
